--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kad-fs",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "a simple file based storage adapter for kad",
   "main": "index.js",
   "scripts": {
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://gitlab.com/gordonhall/kad-fs/issues"
   },
-  "homepage": "https://gitlab.com/gordonhall/kad-fs#README"
+  "homepage": "https://gitlab.com/gordonhall/kad-fs#README",
+  "dependencies": {
+    "readable-stream": "^2.0.4"
+  }
 }
